# EE405-AI-empowered-Autonomous-Cars

./: README.md
catkin_ws/: .~lock.waypoint.csv#  final_map_1.xcf  final_map_1.yaml  team2map2.yaml  test.yaml.yaml  waypoint.csv
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_ws/devel/lib/a_star_planner/: a_star_planner_node  a_star_planner_node_test
catkin_ws/devel/lib/darknet_ros/: darknet_ros
catkin_ws/devel/lib/fast_gicp/: gicp_align  gicp_kitti
catkin_ws/devel/lib/hector_compressed_map_transport/: map_to_image_node
catkin_ws/devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
catkin_ws/devel/lib/hector_imu_attitude_to_tf/: imu_attitude_to_tf_node
catkin_ws/devel/lib/hector_imu_tools/: pose_and_orientation_to_imu_node
catkin_ws/devel/lib/hector_map_server/: hector_map_server
catkin_ws/devel/lib/hector_mapping/: hector_mapping
catkin_ws/devel/lib/hector_trajectory_server/: hector_trajectory_server
catkin_ws/devel/lib/laser_proc/: laser_proc
catkin_ws/devel/lib/localization/: localization
catkin_ws/devel/lib/myahrs_driver/: myahrs_driver
catkin_ws/devel/lib/openslam_gmapping/: autoptr_test  configfile_test  gfs2log  gfs2neff  gfs2rec  icptest  log_plot  log_test  rdk2carmen  scanmatch_test  scanstudio2carmen
catkin_ws/devel/lib/pkgconfig/: a_star_planner.pc  cv_bridge.pc  darknet_ros.pc  (+40 more)
catkin_ws/install/: setup.sh
catkin_ws/src/localization/: CMakeLists.txt
catkin_ws/src/localization/src/: localization.cpp  localization_old.cpp
catkin_ws/src/waypoint_follower/: final_map.yaml
catkin_ws/temp/: waypoint.csv
(+160 files in other folders)
